--- a/build.gradle
+++ b/build.gradle
@@ -2,14 +2,59 @@
 
 buildscript {
     ext.kotlin_version = '1.3.50'
+    ext {
+        versions = [
+                compileSdk          : 29,
+                minSdk              : 21,
+                targetSdk           : 29,
+
+                // kotlin
+                kotlin              : '1.3.50',
+
+                // android
+                core_ktx            : '1.1.0',
+                appcompat           : '1.1.0',
+                preference_ktx      : '1.1.0',
+                constraintlayout    : '1.1.3',
+                material            : '1.2.0-alpha01',
+                lifecycle           : '2.1.0',
+                navigation          : '2.1.0',
+                room                : '2.2.1',
+
+                //glide
+                glide              : '4.10.0',
+                glide_compiler     : '4.9.0',
+
+
+                // dagger
+                dagger              : '2.25.2',
+                assisted_inject     : '0.5.0',
+
+                // reactive
+                rxjava              : '2.2.13',
+                rxandroid           : '2.1.1',
+                rxkotlin            : '2.4.0',
+                rxbinding           : '3.0.0',
+                rxpreferences       : '2.0.0',
+
+                // network
+                okhttp              : '4.2.2',
+                retrofit            : '2.6.2',
+
+                // misc
+                android_state       : '1.4.1',
+        ]
+    }
+
     repositories {
         google()
         jcenter()
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.1'
+        classpath 'com.android.tools.build:gradle:3.5.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
