--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,7 @@ android {
 
 dependencies {
 
-    def nav_version = "2.1.0"
+    def nav_version = '2.2.2'
 
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
@@ -57,7 +57,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-    implementation 'com.google.android.gms:play-services-auth:17.0.0'
+    implementation 'com.google.android.gms:play-services-auth:18.0.0'
 
     // android
     implementation "androidx.core:core-ktx:$versions.core_ktx"
@@ -84,13 +84,6 @@ dependencies {
     implementation "com.google.dagger:dagger:$versions.dagger"
     kapt "com.google.dagger:dagger-compiler:$versions.dagger"
     kapt "com.google.dagger:dagger-android-processor:$versions.dagger"
-
-    // reactive
-    implementation "io.reactivex.rxjava2:rxjava:$versions.rxjava"
-    implementation "io.reactivex.rxjava2:rxandroid:$versions.rxandroid"
-    implementation "io.reactivex.rxjava2:rxkotlin:$versions.rxkotlin"
-    implementation "com.jakewharton.rxbinding3:rxbinding:$versions.rxbinding"
-    implementation "com.f2prateek.rx.preferences2:rx-preferences:$versions.rxpreferences"
 
     // network
     implementation "com.squareup.okhttp3:okhttp:$versions.okhttp"
