--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.50'
+    ext.kotlin_version = '1.3.72'
     ext {
         versions = [
                 compileSdk          : 29,
@@ -12,34 +12,34 @@ buildscript {
                 kotlin              : '1.3.50',
 
                 // android
-                core_ktx            : '1.1.0',
+                core_ktx            : '1.2.0',
                 appcompat           : '1.1.0',
-                preference_ktx      : '1.1.0',
+                preference_ktx      : '1.1.1',
                 constraintlayout    : '1.1.3',
-                material            : '1.2.0-alpha01',
-                lifecycle           : '2.1.0',
-                navigation          : '2.1.0',
-                room                : '2.2.1',
+                material            : '1.2.0-alpha06',
+                lifecycle           : '2.2.0',
+                navigation          : '2.2.2',
+                room                : '2.2.5',
 
                 //glide
-                glide              : '4.10.0',
-                glide_compiler     : '4.9.0',
+                glide              : '4.11.0',
+                glide_compiler     : '4.11.0',
 
 
                 // dagger
-                dagger              : '2.25.2',
+                dagger              : '2.27',
                 assisted_inject     : '0.5.0',
 
                 // reactive
                 rxjava              : '2.2.13',
                 rxandroid           : '2.1.1',
                 rxkotlin            : '2.4.0',
-                rxbinding           : '3.0.0',
+                rxbinding           : '3.1.0',
                 rxpreferences       : '2.0.0',
 
                 // network
-                okhttp              : '4.2.2',
-                retrofit            : '2.6.2',
+                okhttp              : '4.7.2',
+                retrofit            : '2.9.0',
 
                 // misc
                 android_state       : '1.4.1',
@@ -52,7 +52,7 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.3'
+        classpath 'com.android.tools.build:gradle:4.0.0-rc01'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0'
         // NOTE: Do not place your application dependencies here; they belong
