working tab layout with ripple issue

--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ buildscript {
 
                 // misc
                 android_state       : '1.4.1',
+                dynamicanimation_version : '1.0.0'
         ]
     }
 
