--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     // android
     implementation "androidx.core:core-ktx:$versions.core_ktx"
     implementation "androidx.appcompat:appcompat:$versions.appcompat"
+    implementation "androidx.dynamicanimation:dynamicanimation:$versions.dynamicanimation_version"
     implementation "androidx.preference:preference-ktx:$versions.preference_ktx"
     implementation "androidx.constraintlayout:constraintlayout:$versions.constraintlayout"
     implementation "androidx.lifecycle:lifecycle-extensions:$versions.lifecycle"
